# stt-action-recognition

./: dataset.py  main.py  pyproject.toml  remove_npy.py  train.py
histories/: history_r2plus1d_augmented-2.txt
utils/: checkpoints.py
