[tool.poetry]
name = "basketball-action-recognition"
version = "0.1.0"
description = "Basketball Action Recognition"
authors = ["petkovikjandrej <andrej.petkovikj@loka.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"

torch = {version = "2.0.0+cu117", source = "pytorch"}
torchvision = {version = "0.15.0+cu117", source = "pytorch"}
torchaudio = {version = "2.0.0+cu117", source = "pytorch"}


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "supplemental"