[tool.poetry]
name = "basketball-action-recognition"
version = "0.1.0"
description = "Basketball Action Recognition"
authors = ["petkovikjandrej <andrej.petkovikj@loka.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9, <3.11"

torch = {version = "2.0.0+cu117", source = "pytorch"}
torchvision = {version = "0.15.0+cu117", source = "pytorch"}
torchaudio = {version = "2.0.0+cu117", source = "pytorch"}
numpy = "<2"
tqdm = "^4.66.5"
easydict = "^1.13"
vidaug = "^1.5"
scipy = "<=1.10"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
imutils = "^0.5.4"
opencv-python = "<4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu117"
priority = "explicit"